# qt_with_cmake_example

./: CMakeLists.txt  README.md  mainwindow.h  mainwindow.ui
